use HttpClient (JDK >=11) also switch json parser