@@ -1,10 +1,15 @@
 package Main.TelegramReporter.Telegram;
 
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.util.Scanner;
-import org.json.simple.*;
-import org.json.simple.parser.*;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpClient.Version;
+import java.net.http.HttpResponse.BodyHandlers;
+
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParser;
 
 import Main.TelegramReporter.Main.TelegramReporter;
 
@@ -12,58 +17,54 @@ import org.bukkit.Bukkit;
 
 public class getUpdates extends Thread {
    private String token = null;
+   private static HttpClient httpClient = HttpClient.newBuilder().version(Version.HTTP_2).build();
+   private static String max_update_id = "";
+   private static String last_broadcasted_msg = "";
 
    public getUpdates(String token) {
       this.token = token;
    }
 
    public void run() {
-      String inline = "";
+      HttpResponse<String> response = null;
       try {
-         URL url = new URL("https://api.telegram.org/bot" + this.token + "/getUpdates");
-         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-         conn.setRequestMethod("GET");
-         conn.connect();
-         Scanner sc = new Scanner(url.openStream());
-         while (sc.hasNext()) {
-            inline += sc.nextLine();
-         }
-         sc.close();
-         JSONParser parse = new JSONParser();
-         JSONObject jobj = (JSONObject) parse.parse(inline);
-         JSONArray jsonarr_1 = (JSONArray) jobj.get("result");
+         HttpRequest request = HttpRequest.newBuilder()
+         .uri(URI.create("https://api.telegram.org/bot" + this.token + "/getUpdates?offset="+max_update_id))
+         .build();
+         response = httpClient.send(request, BodyHandlers.ofString());    
+      } catch (Exception e) {
+         System.out.println("MAKE SURE YOU ARE USING JDK 11 or above!");
+         e.printStackTrace();
+      }
+      try{
          String[] whitelisted_chatids = TelegramReporter.chat_ids;
-         for (int i = 0; i < jsonarr_1.size(); i++) {
-            String chatID = (String) (((JSONObject) ((JSONObject) ((JSONObject) jsonarr_1.get(i)).get("message"))
-                  .get("chat")).get("id").toString());
-            for (int j = 0; j < whitelisted_chatids.length; j++) {
-               if (whitelisted_chatids[j].equals(chatID)) {
-
-                  if (((Object) ((JSONObject) ((JSONObject) jsonarr_1.get(i)).get("message")).get("text")) != null) {
-                     String message = "<"
-                           + (String) (((JSONObject) ((JSONObject) ((JSONObject) jsonarr_1.get(i)).get("message"))
-                                 .get("from")).get("first_name").toString())
-                           + "> "
-                           + ((String) ((JSONObject) ((JSONObject) jsonarr_1.get(i)).get("message")).get("text"));
-                     Bukkit.broadcastMessage(message);
+         JsonParser parser = new JsonParser();
+         JsonObject jsonrespone = parser.parse(response.body()).getAsJsonObject();
+         if (jsonrespone.has("result")) {
+            JsonArray jarr = jsonrespone.get("result").getAsJsonArray();
+            if(jarr.size()>0)
+            {
+               max_update_id = Integer.toString(jarr.get(jarr.size()-1).getAsJsonObject().get("update_id").getAsInt() + 1);
+               for (int i = 0; i < jarr.size(); i++) {
+                  String chatID = jarr.get(0).getAsJsonObject().get("message").getAsJsonObject().get("chat").getAsJsonObject().get("id").getAsString();
+                  for (int j = 0; j < whitelisted_chatids.length; j++) {
+                     if (whitelisted_chatids[j].equals(chatID)) {
+                        if (jarr.get(0).getAsJsonObject().get("message").getAsJsonObject().has("text")) {
+                           String message = "<" + jarr.get(0).getAsJsonObject().get("message").getAsJsonObject().get("from").getAsJsonObject().get("first_name").getAsString() + "> "
+                                          + jarr.get(0).getAsJsonObject().get("message").getAsJsonObject().get("text").getAsString();
+                         if(!message.equals(last_broadcasted_msg)){
+                              Bukkit.broadcastMessage(message);
+                            last_broadcasted_msg = message;
+                          }
+                        }
+                        break;
+                     }
                   }
-                  break;
                }
             }
          }
-         if(jsonarr_1.size() > 0)
-         {
-            URL url2 = new URL("https://api.telegram.org/bot" + token + "/getUpdates?offset=" + (Integer
-               .parseInt((((JSONObject) (jsonarr_1.get(jsonarr_1.size() - 1))).get("update_id").toString())) + 1));
-            HttpURLConnection conn2 = (HttpURLConnection) url2.openConnection();
-            conn2.setRequestMethod("GET");
-            conn2.connect();
-            url2.openStream();
-         }
-
-      } catch (Exception e) {
+      }catch(Exception e){
          e.printStackTrace();
       }
-      
    }
 }
